--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -21,7 +21,9 @@
         android:layout_height="67dp"
         android:layout_marginTop="16dp"
         android:entries="@array/player_counts"
-        android:padding="10dp" />
+        android:padding="10dp"
+        android:layout_marginEnd="15dp"
+        android:layout_marginStart="15dp"/>
 
     <TextView
         android:layout_width="295dp"
@@ -39,6 +41,8 @@
         android:layout_height="67dp"
         android:layout_marginTop="16dp"
         android:entries="@array/player_score"
+        android:layout_marginEnd="15dp"
+        android:layout_marginStart="15dp"
         android:padding="10dp" />
 
     <Button
@@ -46,6 +50,8 @@
         android:layout_width="match_parent"
         android:layout_height="87dp"
         android:layout_marginTop="16dp"
+        android:layout_marginEnd="15dp"
+        android:layout_marginStart="15dp"
         android:text="@string/comenzar" />
 
 </LinearLayout>
