Add new feature for exit app, Add and Update 'buttonSocialMedia' 'buttonGoToMenu' 'buttonResetAll' 'logo_companyImageView' buttons. Add 'spinner__border' xml for update 'spinnerPlayerCount' and 'spinnerPlayerScore' Spinner by 'MenuActivity' class

--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -6,14 +6,33 @@
     android:padding="16dp"
     android:gravity="center">
 
+    <ImageButton
+        android:id="@+id/buttonSocialMedia"
+        android:layout_width="200dp"
+        android:layout_height="70dp"
+        android:layout_gravity="start|top"
+        android:layout_marginBottom="60dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginTop="5dp"
+        android:background="@android:color/transparent"
+        android:contentDescription="@string/social_media_button"
+        android:src="@drawable/logo_company"
+        android:scaleType="fitCenter"
+        android:adjustViewBounds="true"/>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
     <TextView
-        android:layout_width="295dp"
-        android:layout_height="68dp"
+        android:layout_width="wrap_content"
+        android:layout_height="50dp"
         android:layout_gravity="center"
         android:text="@string/numero_de_jugadores"
         android:textSize="25sp"
         android:textStyle="bold"
-        android:textColor="@color/brown"/>
+        android:textColor="@color/backYellow"/>
 
     <Spinner
         android:id="@+id/spinnerPlayerCount"
@@ -23,17 +42,18 @@
         android:entries="@array/player_counts"
         android:padding="10dp"
         android:layout_marginEnd="15dp"
-        android:layout_marginStart="15dp"/>
+        android:layout_marginStart="15dp"
+        android:background="@drawable/spinner_border"/>
 
     <TextView
-        android:layout_width="295dp"
-        android:layout_height="68dp"
+        android:layout_width="wrap_content"
+        android:layout_height="50dp"
         android:layout_gravity="center"
         android:text="@string/marcador"
         android:layout_marginTop="50dp"
         android:textSize="25sp"
         android:textStyle="bold"
-        android:textColor="@color/brown"/>
+        android:textColor="@color/backYellow"/>
 
     <Spinner
         android:id="@+id/spinnerPlayerScore"
@@ -43,15 +63,20 @@
         android:entries="@array/player_score"
         android:layout_marginEnd="15dp"
         android:layout_marginStart="15dp"
-        android:padding="10dp" />
+        android:layout_marginBottom="30dp"
+        android:padding="10dp"
+        android:background="@drawable/spinner_border"/>
 
     <Button
         android:id="@+id/buttonStartGame"
         android:layout_width="match_parent"
         android:layout_height="87dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="30dp"
         android:layout_marginEnd="15dp"
         android:layout_marginStart="15dp"
+        android:textSize="20sp"
+        android:backgroundTint="#4604DC"
         android:text="@string/comenzar" />
 
+    </LinearLayout>
 </LinearLayout>
