--- a/app/src/main/res/layout/activity_dart_counter.xml
+++ b/app/src/main/res/layout/activity_dart_counter.xml
@@ -10,25 +10,47 @@
         android:layout_height="match_parent">
 
         <LinearLayout
-            android:id="@+id/playerContainer"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:padding="16dp">
+            tools:ignore="UselessParent">
 
-            <!-- Auto-Generate -->
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
+                <Button
+                    android:id="@+id/buttonGoToMenu"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentStart="true"
+                    android:layout_marginStart="7dp"
+                    android:backgroundTint="@color/purple_700"
+                    android:textColor="@android:color/white"
+                    android:text="@string/go_to_menu" />
+
+            <Button
+                android:id="@+id/buttonResetAll"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentTop="true"
+                android:layout_marginEnd="7dp"
+                android:backgroundTint="@color/resetRed"
+                android:text="@string/reset_all"
+                android:textColor="@android:color/white" />
+            </RelativeLayout>
+
+            <LinearLayout
+                android:id="@+id/playerContainer"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:padding="0dp">
+
+                <!-- Auto-Generate -->
+
+            </LinearLayout>
         </LinearLayout>
     </ScrollView>
-
-    <Button
-        android:id="@+id/buttonResetAll"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/reset_all"
-        android:layout_gravity="end|top"
-        android:layout_margin="14dp"
-        android:backgroundTint="@color/resetRed"
-        android:textColor="@android:color/white"
-        android:alpha="0.7" />
 </FrameLayout>
