--- a/app/src/main/res/layout/dialog_edit_name.xml
+++ b/app/src/main/res/layout/dialog_edit_name.xml
@@ -10,7 +10,8 @@
         android:id="@+id/editNameEditText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:inputType="textCapSentences|textPersonName"
         android:hint="@string/ingrese_el_nombre"
-        android:maxLength="6" />
+        android:maxLength="10" />
 
 </LinearLayout>
